<package>
    <name>refollow_path_recovery</name>
    <version>1.0.0</version>
    <description>Refollow Path Recovery package</description>
    <maintainer email="jgines@todo.todo">jgines</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>nav_msgs</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>nav_msgs</run_depend>

    <test_depend>rostest</test_depend>

    <export>
        <nav_core plugin="${prefix}/ccr_plugin.xml" />
    </export>
</package>
